output/unpackaged/unpackaged/objects/Deal_Validation_Rule__mdt.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Blocking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Blocking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Message__c</fullName>
        <label>Internal Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operator__c</fullName>
        <label>Operator</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Message__c</fullName>
        <label>Partner Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remediation__c</fullName>
        <label>Remediation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rule_Version__c</fullName>
        <label>Rule Version</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <label>Severity</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Field__c</fullName>
        <label>Target Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Deal Validation Rule</label>
    <pluralLabel>Deal Validation Rules</pluralLabel>
</CustomObject>